# Agentic-customer-support-copilot

./: .gitignore  LICENSE  README.md
src/: .env.example  README.md  main.py  pyproject.toml
src/agents/CaseOrchestratorAgent/: AgentState.py  CaseState.py  graph_builder.py
src/agents/CaseOrchestratorAgent/nodes/: __init__.py  approve_and_send_auth_request_node.py  auth_policy_evaluator_node.py  auth_session_manager_node.py  create_case_node.py  create_or_update_auth_request_draft_node.py  extract_intents_entities_node.py  message_writer_node.py  plan_actions_node.py  review_finalize_node.py  save_extraction_node.py
src/agents/CaseOrchestratorAgent/routers/: __init__.py  route_after_actions_join.py  route_after_auth.py  (+1 more)
src/email_servers/IMAPSMTP/: imap_smtp_mcp_server.py  send_email_via_mcp.py  test_agents.py
src/email_servers/gemail/: gmail_mcp_server.py
src/evaluation/: intents_entities_eval_dataset.jsonl  models.py  push_metrics.py  run_eval.py
src/helpers/: config.py
src/llms/: Enums_LLM.py  ProviderFactory_LLM.py
src/llms/provider/: AzureOpenAIProvider.py  HuggingFaceProvider.py  OpenAIProvider.py
src/llms/templates/: template_parser.py
src/logs/: log.py
src/models/: ActionsModel.py  AuthSessionsModel.py  CasesModel.py  ContractsModel.py  DraftsModel.py  ExtractionsModel.py  MessagesModel.py  ReviewsModel.py
src/models/db_schemes/: __init__.py  actions.py  auth_sessions.py  cases.py  drafts.py  extractions.py  messages.py  reviews.py
src/notebook/: example.ipynb
src/routes/: base.py
src/utils/: client_deps_container.py  pii_safe.py
(+59 files in other folders)
